--- a/2011-02-18.html
+++ b/2011-02-18.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Infinite recursion with an XML schema</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Infinite recursion with an XML schema</h1>
-<pre><code>&lt;?xml version="1.0" encoding="UTF-8"?&gt;
+<pre class="xml"><code>&lt;?xml version="1.0" encoding="UTF-8"?&gt;
 &lt;xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" elementFormDefault="qualified" attributeFormDefault="unqualified"&gt;
     &lt;xs:element name="How_To_Have_A_Bad_Day" type="InfiniteNode"&gt;
         &lt;xs:annotation&gt;
