--- a/2011-02-09T18:34.html
+++ b/2011-02-09T18:34.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>First Post!</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>First Post!</h1>
