--- a/2011-02-09T19:37.html
+++ b/2011-02-09T19:37.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Credit Card Masking and Regular Expression in .Net</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
