--- a/2011-02-18.html
+++ b/2011-02-18.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Infinite recursion with an XML schema</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
