--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <meta http-equiv="refresh" content="0; url=2011-02-18.html" />
     <script type="text/javascript">
