--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Home</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
-    <!--<meta http-equiv="refresh" content="0; url=2011/02/2011-02-18.html" />-->
+    <meta http-equiv="refresh" content="0; url=2011/02/2011-02-18.html" />
     <script type="text/javascript">
-        window.location.href = "2011/02/2011-02-18.html";
+        window.location.href="2011/02/2011-02-18.html";
     </script>
 </head>
 <body>
