--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="scripts.js"></script>
 </head>
-<body>
+<body onload="LoadTOC('toc.txt')">
 <div class="navigation" id="navigation"><a href="toc.html">Table of Contents</a></div>
 <h1>About me</h1>
 <p>I am Tom Adams, a software developer in the Tampa area since 2004 and specialize in .Net applications. I've worked in
