--- a/About.html
+++ b/About.html
@@ -16,12 +16,17 @@
     (mostly) unfounded opinions on religion and politics and would be glad to discuss them with you in combination with
     any of the aforementioned.</p>
 
-<p>Oh yeah, and I also have some kids and a wife or something. Sometimes they like to hang out with me. I run
-    half-marathons to keep my wife interested in me.</p>
+<p>Oh yeah, and I also have some kids and a wife or something. Sometimes they like to hang out with me.</p>
+
+<ul>
+    <li><a href="https://github.com/tadams1138/">My GitHub account</a></li>
+    <li><a href="www.linkedin.com/in/tom-adams-37703426">My LinkedIn profile</a></li>
+</ul>
 
 <h1>About the blog title</h1>
 <p>I have to credit my wife for that. I was trying to tell her one day to reset the wireless router in the house. As I
     attempted to describe what hardware she needed to reset, she blurted out "Oh, the thing that goes blink in the
     night?" It stuck with me.</p>
+
 </body>
 </html>
