--- a/toc.html
+++ b/toc.html
@@ -12,6 +12,7 @@
 <li><a href=/toc.html>Table of Contents</a></li>
 <li><a href=/index.html>Home</a></li>
 <li><a href=/About.html>About</a></li>
+<li><a href=/2019/06/2019-06-19.html>The Ruminant Pattern</a></li>
 <li><a href=/2011/08/2011-08-23.html>Obfuscating with Dotfuscator</a></li>
 <li><a href=/2011/07/2011-07-29.html>Replacement for .Net Reflector</a></li>
 <li><a href=/2011/07/2011-07-22.html>Improving Project Server 2007 Performance</a></li>
