--- a/toc.html
+++ b/toc.html
@@ -14,6 +14,8 @@
 <li><a href=/About.html>About</a></li>
 <li><a href=/2019/06/2019-06-19.html>The Ruminant Pattern</a></li>
 <li><a href=/2018/05/2018-05-31.html>Rule Set Designer</a></li>
+<li><a href=/2011/11/2011-11-02.html>Built a TeamCity makensis.exe output parser</a></li>
+<li><a href=/2011/10/2011-10-27.html>Built a TeamCity VB6.exe output parser</a></li>
 <li><a href=/2011/10/2011-10-22.html>How to fix a .resx file that won’t compile for .Net 3.5</a></li>
 <li><a href=/2011/09/2011-09-09.html>The dependencies for the object cannot be determined</a></li>
 <li><a href=/2011/08/2011-08-26.html>Building Visual Studio setup projects with TeamCity</a></li>
