--- a/toc.html
+++ b/toc.html
@@ -14,6 +14,7 @@
 <li><a href=/About.html>About</a></li>
 <li><a href=/2019/06/2019-06-19.html>The Ruminant Pattern</a></li>
 <li><a href=/2018/05/2018-05-31.html>Rule Set Designer</a></li>
+<li><a href=/2012/02/2012-02-03.html>Serializing, Deserializing, Deserialization surrogates, and Deserializing data into a dynamically loaded Assembly</a></li>
 <li><a href=/2012/01/2012-01-06.html>How to get a .Net service to restart itself</a></li>
 <li><a href=/2011/11/2011-11-02.html>Built a TeamCity makensis.exe output parser</a></li>
 <li><a href=/2011/10/2011-10-27.html>Built a TeamCity VB6.exe output parser</a></li>
