--- a/404.html
+++ b/404.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Not Found</title>
-    <meta http-equiv="refresh" content="0; url=toc.html" />
+    <meta http-equiv="refresh" content="0; url=/toc.html" />
     <script type="text/javascript">
-        window.location.href="toc.html";
+        window.location.href="/toc.html";
     </script>
 </head>
 <body>
-<p><a href="toc.html">Redirect</a></p>
+<p><a href="/toc.html">Redirect</a></p>
 </body>
 </html>
