--- a/404.html
+++ b/404.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Not Found</title>
-    <meta http-equiv="refresh" content="0; url=/toc.html" />
-    <script type="text/javascript">
-        window.location.href="/toc.html";
-    </script>
 </head>
 <body>
-<p><a href="/toc.html">Redirect</a></p>
+<h1>File Not Found</h1>
+<p>Whoops! Looks like the file has move. Maybe you can find it in the <a href="/toc.html">Table of Contents</a>.</p>
 </body>
 </html>
