--- a/toc.html
+++ b/toc.html
@@ -14,7 +14,8 @@
 <li><a href=/About.html>About</a></li>
 <li><a href=/2019/06/2019-06-19.html>The Ruminant Pattern</a></li>
 <li><a href=/2018/05/2018-05-31.html>Rule Set Designer</a></li>
-<li><a href=/2013/08/2013-09-07.html>The Reinvented Wheel</a></li>
+<li><a href=/2013/09/2013-09-30.html>The 'minClientVersion' attribute is not declared</a></li>
+<li><a href=/2013/09/2013-09-07.html>The Reinvented Wheel</a></li>
 <li><a href=/2013/08/2013-08-07.html>AR Drone Remote released for Windows Phone!</a></li>
 <li><a href=/2013/08/2013-08-02.html>AR Drone Remote released for Windows 8!</a></li>
 <li><a href=/2013/05/2013-05-29.html>xkcd The Browser released!</a></li>
