new post on multiple ctors

--- a/toc.html
+++ b/toc.html
@@ -12,6 +12,7 @@
 <li><a href=/toc.html>Table of Contents</a></li>
 <li><a href=/index.html>Home</a></li>
 <li><a href=/About.html>About</a></li>
+<li><a href=/2019/09/2019-09-15.html>Multiple constructors an anti-pattern?</a></li>
 <li><a href=/2019/06/2019-06-19.html>The Ruminant Pattern</a></li>
 <li><a href=/2018/05/2018-05-31.html>Rule Set Designer</a></li>
 <li><a href=/2013/09/2013-09-30.html>The 'minClientVersion' attribute is not declared</a></li>
