--- a/toc.html
+++ b/toc.html
@@ -22,6 +22,7 @@
 <li><a href=/2016/05/2016-05-07.html>Adventures with MVC 6 - Episode III : Scaffolding the EF7 Class Library</a></li>
 <li><a href=/2016/04/2016-04-30.html>Adventures with MVC 6 - Episode II : Setting up Continuous Integration</a></li>
 <li><a href=/2016/04/2016-04-21.html>Adventures with MVC 6 - Episode I : Setting up my solution structure</a></li>
+<li><a href=/2016/03/2016-03-04.html>How not to write a linq query</a></li>
 <li><a href=/2014/05/2014-05-06.html>Parrot releases AR.FreeFlight for Windows 8</a></li>
 <li><a href=/2014/02/2014-02-12.html>New AR Drone Remote released to Windows Phone 8 and Windows 8.1!</a></li>
 <li><a href=/2013/09/2013-09-30.html>The 'minClientVersion' attribute is not declared</a></li>
