--- a/toc.html
+++ b/toc.html
@@ -25,6 +25,7 @@
 <li><a href=/2016/03/2016-03-04.html>How not to write a linq query</a></li>
 <li><a href=/2015/09/2015-09-18.html>Adventures in upgrading to TFS to 2015</a></li>
 <li><a href=/2015/08/2015-08-15.html>Downgrading Windows for the first time in my life</a></li>
+<li><a href=/2015/04/2015-04-03.html>Running Unit Tests When TFS Build Definition Output Location is AsConfigured</a></li>
 <li><a href=/2014/12/2014-12-31.html>Restricting Bad Websites in IE After IT has Applied Group Policy</a></li>
 <li><a href=/2014/12/2014-12-02.html>Star Wars Episode VII Teaser is just plain boring</a></li>
 <li><a href=/2014/07/2014-07-28.html>Deploy Post-Build Auto-Generated Files in VS2013</a></li>
