add google AdSense

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript">
         window.location.href="2019/09/2019-09-15.html";
     </script>
+    <script data-ad-client="ca-pub-1999637070859163" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <p><a href="2019/09/2019-09-15.html">Redirect</a></p>
