--- a/toc.html
+++ b/toc.html
@@ -23,6 +23,7 @@
 <li><a href=/toc.html>Table of Contents</a></li>
 <li><a href=/index.html>Home</a></li>
 <li><a href=/About.html>About</a></li>
+<li><a href=/2021/08/2021-08-18.html>Permutator</a></li>
 <li><a href=/2019/09/2019-09-15.html>Multiple constructors an anti-pattern?</a></li>
 <li><a href=/2019/06/2019-06-19.html>The Ruminant Pattern</a></li>
 <li><a href=/2018/05/2018-05-31.html>Rule Set Designer</a></li>
